Now when click on an item in Newest tab open its content

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.mancoi.news.News_MainActivity" />
         </activity>
+
+        <activity android:name=".Content_Reader">
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.mancoi.news.News_MainActivity" />
+        </activity>
     </application>
 
 </manifest>
