--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".News_MainActivity">
+        <activity android:name=".News_MainActivity"
+            android:screenOrientation="sensorPortrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,7 +19,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Search_Activity">
+        <activity android:name=".Search_Activity"
+            android:screenOrientation="sensorPortrait">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
@@ -33,14 +35,16 @@
                 android:resource="@xml/searchable" />
         </activity>
 
-        <activity android:name=".Sidebar_OnClick_Activity">
+        <activity android:name=".Sidebar_OnClick_Activity"
+            android:screenOrientation="sensorPortrait">
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.mancoi.news.News_MainActivity" />
         </activity>
 
-        <activity android:name=".Content_Reader">
+        <activity android:name=".Content_Reader"
+            android:screenOrientation="sensorPortrait">
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
