--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.0'
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.android.support:support-v4:26.0.0-alpha1'
+    compile 'com.android.support:customtabs:26.0.0-alpha1'
     testCompile 'junit:junit:4.12'
 }
